package PB_MSG;

message Packet {

  required uint64 time = 1;

  optional uint32 ticks = 7;

  repeated Cpu cpu = 2;
  repeated Mem mem = 3;
  repeated Disk disk = 4;
  repeated Net net = 5;
  repeated Process process = 6;
  repeated CallHeat callheat = 8;

  message Process {
    optional uint32 pid = 1;
    optional string execname = 2;
    optional uint32 usage = 3;
    optional uint32 cpu = 4;
  }

  message Cpu {
    optional uint32 core = 1;
    optional uint32 usage = 2;
  }

  message Mem {
    optional uint64 physmem = 1;
    optional uint64 rss = 2;
    optional uint64 pp_kernel = 3;
    optional uint64 freemem = 4;
    optional uint64 physcap = 5;
    optional uint64 swap = 6;
    optional uint64 swapcap = 7;
  }

  message Net {
    optional uint64 obytes64 = 1;
    optional uint64 rbytes64 = 2;
    optional uint64 opackets = 3;
    optional uint64 ipackets = 4;
    required string instance = 5;
  }

  message Disk {
    required uint32 instance = 1;
    optional uint64 nread = 2;
    optional uint64 nwritten = 3;
    optional uint64 reads = 4;
    optional uint64 writes = 5;
    optional uint64 wtime = 6;
    optional uint64 wlentime = 7;
  }

  message CallHeat {
    required string name = 1;
    optional uint64 lowt = 2;
    optional uint64 hight = 3;
    optional uint64 value = 4;
  }

}
